  which can left/right/center-justify text within the field, and add
  left and right-margin borders.

- Added cand(), cor(), candbool(), and corbool(), similar to and() etc.,
  except these functions stop evaluating their arguments once a terminating
  conclusion is reached. Based on an idea from PennMUSH.

- chomp() can now handle a lone CR or LF.

- You can now get attribute flags with flags(<obj>/<attr>). Based on an
  idea from PennMUSH.

- Added graball(), which is to grab() what matchall() is to match().

- The third argument to ifelse() -- the 'false' result -- is now optional.

- Added ilev(), itext(), and inum() functions, for retrieving data
  from multiple levels of nested iter()-type functions. Based on
  an idea from PennMUSH.

- Added itemize() function, which formats a list of items. Typically used
  to turn a list of words into something like "a, b, and c". Based on an
  idea from PennMUSH.

- Added ledit() function, a mass find-and-replace on a list which can
  replace many instances of nested edit() calls.

- The ljust(), rjust(), and center() functions can take multi-character
  fills.

- The lunion(), linter(), and ldiff() functions are similar to setunion(),
  etc., but an attempt is made to autodetect the list type and sort
  accordingly, or you can specify a sort type, as you can with sort().

- The modify() function now takes lists, enabling multiple variables
  to be modified at once.

- The behavior of remainders in division with negative numbers is
  now consistent (rather than being compiler-dependent), including
  new modulo(), remainder(), and floordiv() functions. The mod()
  function is now an alias for modulo(); if you want it to be an
  alias for remainder() instead, change it in alias.conf

- Added nattr(), which counts the number of attributes on an object.

- sees() can now evaluate the visibility of exits as well as things.
  Also, a small bug has been fixed: the see_owned_dark calculation in